# Projet-TLC

./: .gitignore  README.md  code  code.3a  code.txt  code.txt.3a  code.txt.cpp  code.txt.h  mul.txt  pom.xml  run_whilec.sh  tmp.sh  whilec.code-workspace
analyse/: .classpath  .project
analyse/resource/: code.txt
analyse/src/: Generateur3A.java  Main.java  Visitor.java  whileLexer.java  whileParser.java
exemples/: hello.txt  sum.txt
grammaire/: while.g
grammaire/output/: __Test__.java  __Test___input.txt  while.tokens  whileLexer.java  whileParser.java
lib/org/antlr/antlr-complete-no-st3/: maven-metadata-local.xml  maven-metadata-local.xml.md5  maven-metadata-local.xml.sha1
src/main/java/whilec/: Code3AToJava.java  Generateur3A.java  Main.java  Visitor.java
src/main/java/whilestd/: BinTree.java  Leaf.java  Node.java  Utils.java  input.g
src/test/resources/: TestFunction.txt
whilec/: .gitignore
whilec/resource/: TestFunction.txt
whilec/resource/done/: TestCommand.txt  TestSymbol.txt  TestVariable.txt
whilec/src/: App.java  Code3aToCpp.java  CompilationException.java  Generateur3a.java  SpaghettiStack.java  SpaghettiStackTmp.java  Table.java  Visitor.java  VisitorTmp.java  while.g
whilec/src/output/: while.tokens  whileLexer.java  whileParser.java
whilestd/: CMakeLists.txt  Makefile
whilestd/googletest/: CMakeLists.txt
whilestd/googletest/include/gtest/internal/: gtest-port.h
whilestd/googletest/samples/: sample1.cc  sample1_unittest.cc  sample2.cc  sample2_unittest.cc  sample3_unittest.cc  sample4.cc  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc
whilestd/googletest/src/: gtest.cc
whilestd/googletest/test/: googletest-param-test-test.cc  googletest-param-test2-test.cc  gtest-typed-test2_test.cc  gtest-typed-test_test.cc  gtest_all_test.cc  gtest_prod_test.cc  production.cc
whilestd/include/: BinTree.h  Leaf.h  Node.h  Parsing.h
whilestd/include/whilestd/: BinTree.h  Bool.h  Leaf.h  Node.h  Parser.h  boolean.h  whilestd.h
whilestd/src/: Leaf.cpp  Node.cpp  Parser.cpp  Parsing.cpp  main.cpp
whilestd/test/: testBool.h  testBoolean.h  testLeaf.h  testNode.h  testParser.h  testParsing.h  tests.cpp
(+10 files in other folders)
